# foremanlite

./: .containerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Containerfile  LICENSE  README.md  pyproject.toml  tox.ini
defaults/etc/foremanlite/data/ipxe/: boot.ipxe.j2  pass.ipxe
etc/foremanlite/data/ipxe/: boot.ipxe.j2  provision.ipxe.j2
etc/foremanlite/data/ipxe/defaults/: start.ipxe.j2
etc/foremanlite/exec/: gunicorn_conf_default.py  gunicorn_conf_required.py
foremanlite/: butane.py  cache.py  fsdata.py  logging.py  machine.py  main.py  store.py  vars.py
foremanlite/classes/: machine.py  routes.py  store.py
foremanlite/cli/: __init__.py  __main__.py  cli.py  config.py
foremanlite/cli/commands/: groups.py  machines.py  provision.py  start.py  version.py
foremanlite/serve/: app.py  context.py  handler.py  ipxe.py  util.py
foremanlite/serve/handlers/: util.py
foremanlite/serve/routes/: __init__.py  ignition.py  ipxe.py  machines.py  static.py  templates.py
foremanlite/templates/: boot.ipxe.j2
scripts/: build.sh  get_butane.py
tests/: conftest.py  test_cache.py  test_commands.py  test_fsdata.py  test_logging.py  test_machine.py  test_store.py
