[tool.poetry]
name = "foremanlite"
version = "0.1.0"
description = "Dynamic and containerized PXE-boot service."
authors = ["Ryan Drew <learnitall0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
flask-restx = "^0.5.1"
click = "^8.0.3"
click-config-file = "^0.6.0"
watchdog = "^2.1.6"
redis = "^4.0.2"
beautifultable = "^1.0.1"
pydantic = "^1.8.2"
orjson = "^3.6.5"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
pytest = "^6.2.5"
pytest-redis = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
